--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-geolocation": "^1.0.0",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -18,7 +19,8 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "vue-browser-geolocation": "^1.8.0"
   },
   "browserslist": [
     "> 1%",
